update to env 12

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -113,3 +113,20 @@
   preview={wave-mechanics.gif},
   abbr={Vision}
 }
+@article{Casillas-Trasvina2019,
+  bibtex_show={true},
+  abstract = {Regional three-dimensional groundwater-flow and saltwater transport models were built to analyse saltwater intrusion in the Great Maputo area, southern Mozambique. Increased water demand has led to many private groundwater abstractions, as the local public water supply network has already reached maximum capacity. Pushing for new strategies to tackle the water-supply shortages exposes the aquifer system to saltwater intrusion from entrapped fossil saline groundwater and seawater. Previous attempts at modelling have been frustrated by data limitations. This study compiled all the available data to build the models, which were subsequently calibrated with observed heads, discharges and salt concentrations. The transport models were used to test hypotheses of potential sources of saltwater resulting in the current salinity distribution. Furthermore, scenarios were simulated to assess the impacts of sea-level rise and projected groundwater abstractions. Results show that saline groundwater is widely distributed in the aquifer's western sector, where it is a limiting factor for groundwater development, and seawater intrusion is a risk along the coastline. Newly constructed wells (46) along the Infulene River can be operated with some impacts of saltwater upconing and must be closely monitored. Although current groundwater abstractions (60,340 m3/day) are still small compared with groundwater recharge (980,823 m3/day), larger volumes of abstraction are feasible only when using a high number of production wells further away from the city with relatively low yields to avoid saltwater upconing. Capture of fresh groundwater upstream of discharge areas by wells for water supply is possible while maintaining groundwater discharges for groundwater dependent ecosystems.},
+  title = {{Application of numerical models to assess multi-source saltwater intrusion under natural and pumping conditions in the Great Maputo aquifer, Mozambique}},
+  author = {Casillas-Trasvina, Alberto and Zhou, Yangxiao and Stigter, Tibor Y. and Muss{\'{a}}a, F. E.F. and Ju{\'{i}}zo, D.},
+  year = {2019},
+  journal = {Hydrogeology Journal},
+  preview={wave-mechanics.gif},
+  doi = {10.1007/s10040-019-02053-5},
+  issn = {14350157},
+  keywords = {Coastal aquifers,Mozambique,Numerical modeling,Saltwater intrusion,Scenario analysis},
+  month = {dec},
+  number = {8},
+  pages = {2973--2992},
+  url = {http://link.springer.com/10.1007/s10040-019-02053-5},
+  volume = {27}
+}
