update to env 13

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -103,30 +103,130 @@
   award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
   award_name={Nobel Prize}
 }
-
-@book{przibram1967letters,
+@article{Casillas-Trasvina2025,
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
+  abstract = {The Turlock and Modesto subbasins in California’s Central Valley face critical groundwater sustainability challenges exacerbated by historical overdraft and recurrent drought. This study develops a high-resolution, integrated hydrologic model to enhance understanding of recharge processes, groundwater dynamics, and sustainable management strategies under the Sustainable Groundwater Management Act (SGMA). The model integrates spatially distributed Hydrogeologic Response Units (HGRUs) using HYDRUS-1D for variably saturated flow and MODFLOW-2005 for 3D groundwater flow, all at a high spatial resolution of 300 by 300 m. Key findings from this integrated method include spatially varying recharge rates ranging from 0.5 mm to 1460 mm per year across the model domain, with higher rates observed in cultivated areas dominated by almond, walnut and diverse grain crops and in regions associated with lakes and reservoirs. The study confirms intensive groundwater pumping in East Turlock as a significant driver of a regional cone of depression that impacts groundwater levels throughout the area. Advective particle tracking reveals faster flow paths from elevated recharge zones towards the cone of depression and groundwater residence times that range from 2 to 5000 years, with an average of 636 years. This research enhances the understanding of groundwater dynamics crucial for formulating effective management strategies under SGMA. By delineating recharge patterns and groundwater flow paths, this study provides water managers with actionable insights to optimize recharge efforts, prioritize areas for managed aquifer recharge, and develop targeted interventions to mitigate overdraft impacts and preserve aquifer resources in the Central Valley of California.},
+  doi = {10.1016/j.jhydrol.2025.133377},
+  issn = {00221694},
   preview={wave-mechanics.gif},
-  abbr={Vision}
+  year = {2025},
+  journal = {Journal of Hydrology},
+  title = {{Integrated hydrologic modeling of groundwater flow dynamics and recharge in the San Joaquin Valley}},
+  author = {Casillas-Trasvina, Alberto and Meles, Menberu B. and Cui, Wenyi and Hatch, Tyler and Bradford, Scott and Harter, Thomas},
+  month = {dec},
+  pages = {133377},
+  url = {https://www.sciencedirect.com/science/article/abs/pii/S0022169425007152},
+  volume = {954}
+}
+@article{Casillas-Trasvina2024,
+  bibtex_show={true},
+  abstract = {Hydrogeological numerical models are essential for assessing radioactive waste disposal by understanding groundwater flow systems. These models typically rely on hydraulic head data, with other state variables often underutilized in model inversions. In Flanders' Neogene aquifer, where safety studies for Boom Clay are ongoing, existing models face uncertainties due to dependence on hydraulic heads alone. This study aims to: i) develop a conceptual model of radiogenic Helium-4 (4Herad) production and transport to reproduce observed concentrations; ii) evaluate the usefulness of 4Herad observations as an additional state variable for inverse conditioning; and iii) assess how including 4Herad affects model calibration and uncertainty reduction. We address these objectives by incorporating radiogenic Helium-4 (4Herad) as an unconventional state variable in model inversion to tackle parameter non-uniqueness. Utilizing a Bayesian approach, we employ two 3D models: a groundwater flow (GWF) model conditioned by hydraulic heads and a coupled GWF model with 4Herad production and transport, conditioned by both hydraulic heads and 4Herad concentrations. We hypothesize that integrating 4Herad will improve model accuracy and reduce uncertainties compared to using hydraulic head data alone. Findings indicate that major 4Herad sources include crustal fluxes (~57 %) and in situ Boom Clay production (~25 %). The coupled inference narrows the posterior distributions of parameters, especially for hydraulic conductivity (e.g., Mol, Diest, Berchem formations, and the Rauw Fault) and recharge, showing that 4Herad observations effectively reduce uncertainty beyond hydraulic head data. Including 4Herad improves model reliability and prediction accuracy, highlighting its importance for refining groundwater flow parameters and derived fluxes. To the best of our knowledge, this study marks the first-ever attempt at harnessing 4Herad quantitative insights into flow and transport parameters following a Bayesian approach at a catchment scale, setting a precedent for future research and emphasizing the innovative nature of this work. This study showcases a state-of-the-art approach in hydrogeological modelling, demonstrating the effectiveness of integrating 4Herad with hydraulic head observations to produce more reliable model predictions. By reducing uncertainties in crucial groundwater fluxes, this approach offers significant potential for improving geological disposal safety studies. This pioneering work advocates for the continued use of 4Herad in hydrogeological modelling, emphasizing its innovative contribution to future research and safety studies.},
+  doi = {10.1016/j.scitotenv.2024.176510},
+  issn = {00489697},
+  preview={wave-mechanics.gif},
+  year = {2024},
+  journal = {Science of The Total Environment},
+  title = {{Bayesian inference of coupled groundwater flow and radiogenic helium-4 production and transport at the catchment scale}},
+  author = {Casillas-Trasvina, Alberto and Rogiers, Bart and Beerten, Koen and Wouters, Laurent and Walraevens, Kristine},
+  month = {dec},
+  pages = {176510},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S004896972406666X},
+  volume = {954}
+}
+@article{Meles2024,
+  bibtex_show={true},
+  abstract = {Managed Aquifer Recharge (MAR) is a promising approach to enhance water supply resilience, but it faces significant challenges, such as limited space and time for recharge activities, as well as uncertain bio-geophysical processes, and complex subsurface flow and heterogeneity. In this review, we assess the viability of hydrology-based approaches to enhance groundwater replenishment and identify missing components in existing groundwater recovery activities. We discuss expanding recharge opportunities to under-utilized sources and locations such as hillslopes and mountain systems. Additionally, we explore the possibilities of using existing road infrastructure to capture runoff and convey it to secondary porosity (alluvial fans, faults and fractures) in the mountain fronts. Conventional MAR approaches are usually implemented on valley floors where restrictive clay layers can impede recharge to deep aquifers, and the presence of legacy contaminants in the root or vadose zones can degrade water quality. Hillslope and mountain recharge strategies offer multiple potential benefits over valley floors when there is improved connectivity and faster recharge to deep aquifers, shallower vadose zones, coarser textured deposits, and better surface water quality. Studies show that hillslope recharge accounts for 15–50% of the recharge to valley floors. To further facilitate the effective expansion of groundwater recharge, we propose landscape modifications encompassing slope correction and implementing biological and structural techniques to repurpose roadside channel systems to slow down and/or store flow in hillslopes. These systems can facilitate groundwater recharge and ultimately contribute to sustainable groundwater management. Innovative scientific analyses can help us understand the impacts of MAR on water quality and quantity, uncover the limitations and strengths of recharge in specific locations, and identify the most effective systems. Addressing these gaps will help us achieve a more resilient and sustainable groundwater future.},
+  doi = {10.1016/j.jhydrol.2024.131615},
+  issn = {00221694},
+  preview={wave-mechanics.gif},
+  year = {2024},
+  journal = {Journal of Hydrology},
+  title = {{Uncovering the gaps in managed aquifer recharge for sustainable groundwater management: A focus on hillslopes and mountains}},
+  author = {Meles, Menberu B. and Bradford, Scott and Casillas-Trasvina, Alberto and Chen, Lin and Osterman, Gordon and Hatch, Tyler and Ajami, Hoori and Crompton, Octavia and Levers, Lucia and Kisekka, Isaya},
+  month = {aug},
+  pages = {131615},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0022169424010114},
+  volume = {639}
+}
+@phdthesis{Casillas-Trasvina2022d,
+  author = {Casillas-Trasvina, Alberto},
+  abstract={Numerical models are generally used to represent the physical and/or chemical properties of groundwater systems, and to be implemented in the decision making process from groundwater management supply to safety and feasibility of waste disposal systems. An aquifer can be quite complex where these properties, hydrologic features and hydraulic characteristics are required to faithfully capture the aquifer's current state. As several of these items are diﬀicult to measure they are generally assumed or inferred by inverse methods. In thegeneral practice, traditional methods only use groundwater hydraulic heads for inverse conditioning. However, the information content in groundwater hydraulic heads is limited and, therefore, the complexity of the groundwater system is unsuccessfully captured. Nevertheless, other types of observations ofthe state of the aquifer (state variables) can nowadays be measured in more reliable and straightforward ways. As these other types of observations are generally underrepresented in the general practice of groundwater modelling, these are regarded as unconventional as their challenging application differs from the traditional methods. In this work, the use of unconventional state variables is explored aiming to improve the current conceptual models and reduce parameters and model outcomes uncertainties for groundwater models of the Neogene aquifer, across the Nete Catchment, in the Campine Basin in Belgium. These studies are performed in the region in context of safety and feasibility of potential disposal systems for radioactive waste. Field campaigns were performed for the gathering of these unconventionalstate variables across the study domain: temperature-depth (TD) profiles, hydrochemistry, stable isotopes (δ18O, δ2H, δ13C), and age tracers (14C, 3H,3He, 4He, 4Herad). Additionally, historical data of these state variables wasalso gathered and included in this work. First, a 3D groundwater model was constructed based on a previous model for the Neogene aquifer. The extension of the hydrologic features (i.e. drains,rivers) and several structural updates were performed together with the inclusion of faults using the horizontal flow barrier MODFLOW package, spatially distributed recharge input, and a larger number of hydraulic head observations. Here, we tested different fault configurations in particular for the Rauw Fault were a groundwater level step was observed on the top of this fault. In this way, we accounted for a more realistic representation of the subsurface features which can have an important effect on the groundwater head and flux distribution. This groundwater flow model was then used for the development of subsequent transport models. Second, the use of age tracers and hydrochemistry is here used together with the groundwater model ages derived from advective particle tracking modelling. The initial activity for 14C was corrected following a correction model previously constructed for the Neogene aquifer. Then, the 14C model ageswere estimated, and interpreted in combination with 3H/3He model ages and 4He concentrations to delineate groundwater flow systems. The estimated age tracer apparent ages were then compared with the advective particle trackin gmodel ages to support the conceptual interpretation of the groundwater flow systems distribution. The results suggest i) local, shallow and young (0-100 years) groundwater flow system, ii) an a semi-regional, deep, older (1000-35000 years) groundwater flow system, with iii) an intermediate groundwater flowsystem (100 up to 1000 years) being is likely a mixture between fractions of old and young groundwater. Third, a 3D heat-transport model is constructed following the updated groundwater flow model. Satellite land-surface temperature (LST) images were imposed as model top boundary conditions, monthly, for the last 19 years. To have a better representation of the temperature top boundary condition and more accurate initial conditions, a paleotemperature-time series was derived for the region from several Holocene temperature reconstructions for Europe andthe Northern Hemisphere. This curve was used in combination with the spatially distributed LST to model the temperature variations during the Holocene. The coupled groundwater flow and heat-transport model was conditioned with hydraulic heads and TD profiles to calibrate hydraulic conductivity. The results indicate that the use of TD profiles presents opportunities as improvementis brought by the implementation of TD profiles are additional constrain on the performance of both groundwater flow and heat-transport models. This suggest that meaningful information on important processes not being accountedby the use hydraulic heads only (e.g. groundwater fluxes) can be partially characterized by the inclusion of TD profiles. Finally, a 3D 4Herad production and transport model is constructed following groundwater flow model structure. Several 4Herad production sources are included being in situ from the hydrogeological formations and crustal flux diffusion into the aquifer. The production rate is calculated from uranium (U) and thorium (Th) observations. The production rate, transport parameters, and groundwater flow model parameters were inferred following a Bayesian ap-proach (i.e. DREAMzs). The coupled groundwater flow and 4Herad transportmodel inversion was conditioned with hydraulic head and 4Herad observations. An inversion of only the groundwater flow model was also performed to be able to compare the worth of 4Herad as additional model conditioning state variable in relation to the solely use of hydraulic head. The results demonstrate the uncertainty in model parameters hence, the derived groundwater fluxes, can be reduced by the inclusion of 4Herad as additional unconventional observation toconstrain numerical groundwater models. To conclude, this study shows that the implementation of additional unconventional state variable observations exhibit strong potential for conditioning groundwater flow models. Depending on the application (e.g. shallow areas ordeep into the aquifer) these state variables present robust solutions to reduce model parameter and derived fluxes uncertainties.},
+  pages = {262},
+  school = {Gent Universiteit},
+  title = {{Assessment of unconventional state variables to constrain groundwater flow models of the Neogene Aquifer in the Campine Basin in Belgium}},
+  type = {Doctoral Disseration},
+  url={https://www.researchgate.net/publication/364734656_Assessment_of_unconventional_state_variables_to_constrain_groundwater_flow_models_of_the_Neogene_Aquifer_in_the_Campine_Basin_in_Belgium},
+  month={sep},
+  year = {2022}
+}
+@misc{Casillas-Trasvina2022c,
+  abstract = {Environmental tracers are naturally occurring widespread substances in a hydrogeological system that can be used to identify flow pathways, travel times, groundwater age, and recharge rates. However, these are not typically included during the numerical model inversion process. Recent work has broadened their use in a quantitative way by incorporating them in formal solutions of the inverse problem to estimate hydraulic properties and groundwater fluxes. This is commonly done with numerical codes that at least enable one-way coupling of the different processes, i.e., groundwater flow and solute-transport. Helium-4, carbon-14 and temperature-depth profile measurements represent a valuable source of information which can be exploited to support performance assessment studies. For the Neogene aquifer in Flanders, groundwater flow and solute transport models have been developed in the framework of safety and feasibility studies for the underlying Boom Clay Formation as potential host for geological disposal of radioactive waste. However, the simulated fluxes by these models are still subject to large uncertainties, as they are typically constrained by hydraulic heads only. While the evaluation of candidate host formations continues, the use of age tracers (e.g. 4He) as additional (unconventional) state variable for inverse conditioning is being explored. Current methodological developments to integrate such additional unconventional observations will allow i) to test our current understanding and corresponding models of the system, and ii) to potentially decrease the uncertainties associated with model outcomes by a joint inversion approach. From previous campaigns, a total of 18 4Herad observations have been collected at selected sites across the Nete catchment. Furthermore, the accumulation of 4Herad by in situ production and crustal flux is included in the inversion of the 4He-transport model, where the uncertainty of groundwater flow and transport model parameters is evaluated. Additionally, a Latin hypercube sampling (LHS) design is done with parameters drawn from prior distributions. The corresponding simulation results are used to construct a neural network surrogate model to be used for uncertainty quantification using Bayesian inference. Here, we will present the first results and interpretations of Helium-4 as potential additional state variable for inverse conditioning, and constraining groundwater flow and solute transport models at the catchment scale.},
+  author = {Casillas-Trasvina, Alberto and Rogiers, Bart and Beerten, Koen and Wouters, Laurent and Walraevens, Kristine},
+  doi = {10.5194/egusphere-egu22-11932},
+  month = {mar},
+  title = {{Joint inversion of radiogenic Helium-4 and hydraulic head observations with a neural network surrogate: Application for the Neogene aquifer, Belgium}},
+  url = {https://meetingorganizer.copernicus.org/EGU22/EGU22-11932.html},
+  year = {2022}
+}
+@article{Casillas-Trasvina2022b,
+  bibtex_show={true},
+  abstract = {Heat is a naturally occurring, widespread groundwater tracer that can be used to identify flow patterns in groundwater systems. Temperature measurements, being relatively inexpensive and effortless to gather, represent a valuable source of information which can be exploited to reduce uncertainties on groundwater flow, and, for example, support performance assessment studies on waste disposal sites. In a lowland setting, however, hydraulic gradients are typically small, and whether temperature measurements can be used to inform us about catchment-scale groundwater flow remains an open question. For the Neogene Aquifer in Flanders, groundwater flow and solute transport models have been developed in the framework of safety and feasibility studies for the underlying Boom Clay formation as a potential host rock for geological disposal of radioactive waste. However, the simulated fluxes by these models are still subject to large uncertainties as they are typically constrained by hydraulic heads only. In the current study, we use a state-of-the-art 3D steady-state groundwater flow model, calibrated against hydraulic head measurements, to build a 3D transient heat transport model, for assessing the use of heat as an additional state variable, in a lowland setting and at the catchment scale. We therefore use temperature–depth (TD) profiles as additional state variable observations for inverse conditioning. Furthermore, a Holocene paleo-temperature time curve was constructed based on paleo-temperature reconstructions in Europe from several sources in combination with land surface temperature (LST) remotely sensed monthly data from 2001 to 2019 (retrieved from NASA's Moderate Resolution Imaging Spectroradiometer, MODIS). The aim of the research is to understand the mechanisms of heat transport and to characterize the temperature distribution and dynamics in the Neogene Aquifer. The simulation results clearly underline advection/convection and conduction as the major heat transport mechanisms, with a reduced role of advection/convection in zones where flux magnitudes are low, which suggests that temperature is also a useful indicator in a lowland setting. Furthermore, the performed scenarios highlight the important roles of (i) surface hydrological features and withdrawals driving local groundwater flow systems and (ii) the inclusion of subsurface features like faults in the conceptualization and development of hydrogeological investigations. These findings serve as a proxy of the influence of advective transport and barrier/conduit role of faults, particularly for the Rauw fault in this case, and suggest that solutes released from the Boom Clay might be affected in similar ways.},
+  doi = {10.5194/hess-26-5577-2022},
+  issn = {1607-7938},
+  preview={wave-mechanics.gif},
+  year = {2022},
+  journal = {Hydrology and Earth System Sciences (HESS)},
+  title = {{Characterizing groundwater heat transport in a complex lowland aquifer using paleo-temperature reconstruction, satellite data, temperature–depth profiles, and numerical models}},
+  author = {Casillas-Trasvina, Alberto and Rogiers, Bart and Beerten, Koen and Wouters, Laurent and Walraevens, Kristine},
+  month = {nov},
+  pages = {5577--5604},
+  url = {https://hess.copernicus.org/articles/26/5577/2022/},
+  volume = {26}
+}
+@article{Casillas-Trasvina2022a,
+  bibtex_show={true},
+  abstract = {Apparent groundwater age dating has been proven useful and robust in understanding water origin and mixing processes, particularly when multiple tracers are considered. However, even though now extensively used, the age tracers have not been widely applied in the general practice of flow and transport model calibration. A multi tracer-study was carried out in the Neogene aquifer in Flanders to quantify the apparent age and construct a joint interpretation for the delineation of different groundwater flow systems. This understanding is critical as part of the safety and feasibility studies for the underlying Boom Clay Formation that has been considered as a potential host rock for the geological disposal of radioactive waste. In this study, we combine evidence from tritium/helium-3 (3H/3He), helium-4 (4He) and radiocarbon (14C) dating as well as stable isotopic ($\delta$18O, $\delta$2H) and hydrochemical signatures in combination with particle tracking-based age distributions from the 3D groundwater flow model. The results of the study indicate that mixing of groundwater with young and old fractions occurs predominantly in the central part of the aquifer which is made evident by the coexistence of 3H (pre and post-bomb pulse Era), 14C and 4He in several groundwater samples. The mixing between water of different origin is also supported by the sampled stable isotopic and hydrochemical composition of groundwater. Particle tracking residence time results show an acceptable agreement with apparent ages derived from age tracers for young (≤100 years) and old (>1000 years) groundwater. Groundwater with ages between 100 and 1000 years is likely a mixture of water with young/old fractions and shows the strongest discrepancies between advective model ages and age tracer based apparent ages. On the basis of our findings, we distinguish between three groundwater flow systems in the Neogene aquifer: i) a shallow/local flow system, with groundwater originating from modern meteoric water; ii) a deep/semi-regional flow system, characterized by old groundwater where the presence of 4Herad is significant; iii) a mixed zone of groundwater flow where the recently infiltrated meteoric water mixes with discharging old groundwater. These results have helped us to refine previously proposed conceptual models for the study area and will in the end reduce uncertainties relevant to the potential future geological disposal of radioactive waste.},
+  doi = {10.1016/j.hydroa.2022.100132},
+  issn = {25899155},
+  preview={wave-mechanics.gif},
+  year = {2022},
+  journal = {Journal of Hydrology X},
+  title = {{Using helium-4, tritium, carbon-14 and other hydrogeochemical evidence to evaluate the groundwater age distribution: The case of the Neogene aquifer, Belgium}},
+  author = {Casillas-Trasvina, Alberto and Rogiers, B. and Beerten, K. and P{\"{a}}rn, J. and Wouters, L. and Walraevens, K.},
+  month = {dec},
+  url = {https://www.sciencedirect.com/science/article/pii/S2589915522000141},
+  volume = {17}
+}
+@article{Casillas-Trasvina2021,
+  bibtex_show={true},
+  abstract = {Faults may impact regional groundwater flow and transport, so it is important to include them during aquifer-system conceptualization and while constructing groundwater flow models. For the Neogene aquifer in Flanders (Belgium), three-dimensional groundwater-flow and solute-transport models have been developed in the framework of safety and feasibility studies for the underlying Boom Clay Formation as a potential host for geological disposal of radioactive waste. The model outcomes are subject to uncertainties as they are typically constrained only by hydraulic heads, and their current conceptualization does not differentiate the fault zones from the undisturbed hydrostratigraphic formations. A groundwater flow model has been developed using MODFLOW-2005 to investigate how groundwater flow in the sedimentary Neogene aquifer may be disturbed by the Rauw Fault—a 55-km-long normal fault—across the Nete catchment. The observed hydraulic gradient across the fault zone appears significant, with head differences of 1.5–2.0 m over a horizontal distance of 60 m. A simulated hydraulic-head difference of 2.4 m was achieved largely corresponding to the observed behavior. The Neogene aquifer, within the Nete catchment, seems to be composed of several local flow systems and potentially with a deeper more semiregional/intermediate flow system. Testing different fault configurations shows the impact on the local/semiregional flow system, with pronounced effects in the fault’s vicinity, and extending or narrowing the flow systems further away. These results demonstrate the importance of considering faults, or any other hydrogeological subsurface barrier/conduit, and suggests they should be accounted for in the general practice of subsurface activity impact assessment.},
+  doi = {10.1007/s10040-021-02423-y},
+  issn = {1435-0157},
+  preview={wave-mechanics.gif},
+  year = {2021},
+  journal = {Hydrogeology Journal},
+  title = {{Exploring the hydrological effects of normal faults at the boundary of the Roer Valley Graben in Belgium using a catchment-scale groundwater flow model}},
+  author = {Casillas-Trasvina, Alberto and Rogiers, Bart and Beerten, Koen and Wouters, Laurent and Walraevens, Kristine},
+  month = {nov},
+  pages = {133-149},
+  url = {https://link.springer.com/10.1007/s10040-021-02423-y},
+  volume = {30},
+  publisher = {Springer Berlin Heidelberg}
 }
 @article{Casillas-Trasvina2019,
   bibtex_show={true},
   abstract = {Regional three-dimensional groundwater-flow and saltwater transport models were built to analyse saltwater intrusion in the Great Maputo area, southern Mozambique. Increased water demand has led to many private groundwater abstractions, as the local public water supply network has already reached maximum capacity. Pushing for new strategies to tackle the water-supply shortages exposes the aquifer system to saltwater intrusion from entrapped fossil saline groundwater and seawater. Previous attempts at modelling have been frustrated by data limitations. This study compiled all the available data to build the models, which were subsequently calibrated with observed heads, discharges and salt concentrations. The transport models were used to test hypotheses of potential sources of saltwater resulting in the current salinity distribution. Furthermore, scenarios were simulated to assess the impacts of sea-level rise and projected groundwater abstractions. Results show that saline groundwater is widely distributed in the aquifer's western sector, where it is a limiting factor for groundwater development, and seawater intrusion is a risk along the coastline. Newly constructed wells (46) along the Infulene River can be operated with some impacts of saltwater upconing and must be closely monitored. Although current groundwater abstractions (60,340 m3/day) are still small compared with groundwater recharge (980,823 m3/day), larger volumes of abstraction are feasible only when using a high number of production wells further away from the city with relatively low yields to avoid saltwater upconing. Capture of fresh groundwater upstream of discharge areas by wells for water supply is possible while maintaining groundwater discharges for groundwater dependent ecosystems.},
-  title = {{Application of numerical models to assess multi-source saltwater intrusion under natural and pumping conditions in the Great Maputo aquifer, Mozambique}},
-  author = {Casillas-Trasvina, Alberto and Zhou, Yangxiao and Stigter, Tibor Y. and Muss{\'{a}}a, F. E.F. and Ju{\'{i}}zo, D.},
-  year = {2019},
-  journal = {Hydrogeology Journal},
-  preview={wave-mechanics.gif},
   doi = {10.1007/s10040-019-02053-5},
   issn = {14350157},
-  keywords = {Coastal aquifers,Mozambique,Numerical modeling,Saltwater intrusion,Scenario analysis},
+  preview={wave-mechanics.gif},
+  year = {2019},
+  journal = {Hydrogeology Journal},
+  title = {{Application of numerical models to assess multi-source saltwater intrusion under natural and pumping conditions in the Great Maputo aquifer, Mozambique}},
+  author = {Casillas-Trasvina, Alberto and Zhou, Yangxiao and Stigter, Tibor Y. and Muss{\'{a}}a, F. E.F. and Ju{\'{i}}zo, D.},
   month = {dec},
   number = {8},
   pages = {2973--2992},
   url = {http://link.springer.com/10.1007/s10040-019-02053-5},
-  volume = {27}
+  volume = {27},
+  publisher = {Springer Berlin Heidelberg}
 }
